<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.outnin.logger.app.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_logging"
        android:id="@+id/startLogging"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:spinnerMode="dropdown"
        android:clickable="true"
        android:layout_below="@+id/locationText"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/locationText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#00bbff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gps_provider"
        android:id="@+id/gpsProviderView"
        android:textColor="#00bbff"
        android:layout_below="@+id/location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gpsProvider"
        android:text="@string/unknown"
        android:layout_below="@+id/gpsProviderView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gps_coordinates"
        android:id="@+id/gpsCoordinatesView"
        android:textColor="#00BBFF"
        android:layout_below="@+id/gpsProvider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unknown"
        android:id="@+id/gpsCoordinates"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gpsCoordinatesView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gps_accuracy"
        android:id="@+id/gpsAccuracyView"
        android:textColor="#00BBFF"
        android:layout_below="@+id/gpsCoordinates"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unknown"
        android:id="@+id/gpsAccuracy"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gpsAccuracyView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cell_signal_strength"
        android:id="@+id/cellSignalStrengthView"
        android:textColor="#00BBFF"
        android:layout_below="@+id/gpsAccuracy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unknown"
        android:id="@+id/cellSignalStrength"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cellSignalStrengthView"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
